app/src/main/java/com/example/natifetesttask/common/util/result/error/CustomError.kt
package com.example.natifetesttask.common.util.result.error

data class CustomError(
    val errorCode: Int,
    val message: String
)